# gcc-cli

./: .gitignore  README.md
gcc/: __init__.py
gcc-cli/: pyproject.toml
gcc-cli/gcc/: cli.py  sdk.py
gcc-cli/gcc/adapters/: generic.py  langgraph.py
gcc-cli/gcc/core/: commit.py
gcc-cli/gcc/models/: workspace.py
gcc-cli/tests/: test_branch.py
gcc/core/: branch.py  diff.py  init.py  log.py  status.py  utils.py
gcc/models/: commit.py
tests/: test_commit.py  test_init.py
