[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[project]
name = "gcc-cli"
version = "0.1.0"
description = "Git-style version control for AI agent context"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
gcc = "gcc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["gcc"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]